Log/sRun_job.err
Traceback (most recent call last):
  File "/data/ling_shared/garciag/SkeletonV1/Supercomputer/../Src/Main.py", line 20, in <module>
    from SkeleNet import SkeleNet,skeletize
  File "/data/ling_shared/garciag/SkeletonV1/Src/SkeleNet.py", line 19, in <module>
    from DataStructures import kdTree,SplitTree
  File "/data/ling_shared/garciag/SkeletonV1/Src/DataStruct/DataStructures.py", line 1407
    diffmat[i].append(abs(ds[i] - ds[j]))
    ^
IndentationError: expected an indented block after 'else' statement on line 1405
ffmpeg version 5.0.1-static https://johnvansickle.com/ffmpeg/  Copyright (c) 2000-2022 the FFmpeg developers
  built with gcc 8 (Debian 8.3.0-6)
  configuration: --enable-gpl --enable-version3 --enable-static --disable-debug --disable-ffplay --disable-indev=sndio --disable-outdev=sndio --cc=gcc --enable-fontconfig --enable-frei0r --enable-gnutls --enable-gmp --enable-libgme --enable-gray --enable-libfribidi --enable-libass --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-librubberband --enable-libsoxr --enable-libspeex --enable-libsrt --enable-libvorbis --enable-libopus --enable-libtheora --enable-libvidstab --enable-libvo-amrwbenc --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libxvid --enable-libzimg
  libavutil      57. 17.100 / 57. 17.100
  libavcodec     59. 18.100 / 59. 18.100
  libavformat    59. 16.100 / 59. 16.100
  libavdevice    59.  4.100 / 59.  4.100
  libavfilter     8. 24.100 /  8. 24.100
  libswscale      6.  4.100 /  6.  4.100
  libswresample   4.  3.100 /  4.  3.100
  libpostproc    56.  3.100 / 56.  3.100
Input #0, image2, from '../AnimationData/Spin/%03dspin.png':
  Duration: 00:00:14.40, start: 0.000000, bitrate: N/A
  Stream #0:0: Video: png, rgba(pc), 1920x1440 [SAR 11811:11811 DAR 4:3], 25 fps, 25 tbr, 25 tbn
Stream mapping:
  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))
Press [q] to stop, [?] for help
[libx264 @ 0xb9b9140] using SAR=1/1
[libx264 @ 0xb9b9140] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2
[libx264 @ 0xb9b9140] profile High, level 5.1, 4:2:0, 8-bit
[libx264 @ 0xb9b9140] 264 - core 164 r3094 bfc87b7 - H.264/MPEG-4 AVC codec - Copyleft 2003-2022 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=45 lookahead_threads=7 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
Output #0, mp4, to '../AnimationData/Spin/Spin.mp4':
  Metadata:
    encoder         : Lavf59.16.100
  Stream #0:0: Video: h264 (avc1 / 0x31637661), yuv420p(tv, progressive), 1920x1440 [SAR 1:1 DAR 4:3], q=2-31, 60 fps, 15360 tbn
    Metadata:
      encoder         : Lavc59.18.100 libx264
    Side data:
      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A
frame=    2 fps=0.0 q=0.0 size=       0kB time=00:00:00.00 bitrate=N/A dup=1 drop=0 speed=   0x    frame=   31 fps=0.0 q=0.0 size=       0kB time=00:00:00.00 bitrate=N/A dup=1 drop=0 speed=   0x    frame=   74 fps= 72 q=0.0 size=       0kB time=00:00:00.00 bitrate=N/A dup=1 drop=0 speed=   0x    frame=  122 fps= 79 q=31.0 size=       0kB time=00:00:00.50 bitrate=   0.8kbits/s dup=1 drop=0 speed=0.326x    frame=  171 fps= 83 q=31.0 size=     256kB time=00:00:01.31 bitrate=1593.0kbits/s dup=1 drop=0 speed=0.642x    frame=  219 fps= 86 q=31.0 size=     512kB time=00:00:02.11 bitrate=1981.7kbits/s dup=1 drop=0 speed=0.828x    frame=  269 fps= 88 q=31.0 size=     768kB time=00:00:02.95 bitrate=2132.8kbits/s dup=1 drop=0 speed=0.962x    frame=  319 fps= 89 q=31.0 size=    1024kB time=00:00:03.78 bitrate=2217.3kbits/s dup=1 drop=0 speed=1.06x    frame=  361 fps= 87 q=-1.0 Lsize=    1865kB time=00:00:05.96 bitrate=2560.7kbits/s dup=1 drop=0 speed=1.44x    
video:1863kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.134064%
[libx264 @ 0xb9b9140] frame I:2     Avg QP:23.20  size: 36753
[libx264 @ 0xb9b9140] frame P:350   Avg QP:23.65  size:  5172
[libx264 @ 0xb9b9140] frame B:9     Avg QP:25.94  size:  2528
[libx264 @ 0xb9b9140] consecutive B-frames: 95.0%  5.0%  0.0%  0.0%
[libx264 @ 0xb9b9140] mb I  I16..4: 27.3% 63.1%  9.7%
[libx264 @ 0xb9b9140] mb P  I16..4:  0.4%  1.1%  0.1%  P16..4:  8.9%  2.9%  1.1%  0.0%  0.0%    skip:85.6%
[libx264 @ 0xb9b9140] mb B  I16..4:  0.2%  0.2%  0.0%  B16..8: 12.3%  1.4%  0.1%  direct: 0.1%  skip:85.9%  L0:46.1% L1:50.4% BI: 3.5%
[libx264 @ 0xb9b9140] 8x8 transform intra:67.7% inter:64.8%
[libx264 @ 0xb9b9140] coded y,uvDC,uvAC intra: 6.8% 5.4% 2.7% inter: 1.0% 2.1% 0.7%
[libx264 @ 0xb9b9140] i16 v,h,dc,p: 61% 24%  9%  7%
[libx264 @ 0xb9b9140] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 19%  6% 73%  0%  1%  0%  0%  0%  0%
[libx264 @ 0xb9b9140] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 43% 16% 27%  2%  3%  2%  2%  2%  2%
[libx264 @ 0xb9b9140] i8c dc,h,v,p: 89%  4%  4%  2%
[libx264 @ 0xb9b9140] Weighted P-Frames: Y:0.0% UV:0.0%
[libx264 @ 0xb9b9140] ref P L0: 77.3%  4.3% 13.9%  4.4%
[libx264 @ 0xb9b9140] ref B L0: 85.1% 14.9%
[libx264 @ 0xb9b9140] kb/s:2535.10
